# MarkMind

./: IMPORT_FEATURE.md  README.md
client/: .env.example  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
client/src/api/: index.ts
client/src/assets/: main.css
client/src/components/: ChatPanel.vue  ImportWizard.vue  KnowledgeGraph.vue  NodeDetailModal.vue  SearchPanel.vue
client/src/components/ui/: Badge.vue  Button.vue  Card.vue  Input.vue  Modal.vue  Spinner.vue  Textarea.vue
client/src/lib/: nodeTypes.ts
client/src/router/: index.ts
client/src/types/: index.ts
client/src/views/: HomeView.vue  LibraryView.vue
server/: .env.example  AGENT_REFACTOR.md  IMPLEMENTATION.md  QUICKSTART.md  README.md  init_db.sh  main.py  prd.md  pyproject.toml  test_api.py
server/app/: __init__.py  config.py  database.py  file_utils.py  init_db.py  models.py  utils.py
server/app/api/: __init__.py  chat.py  graph.py  ingest.py
server/app/spiders/: xhs.py
server/spider_xhs/: pnpm-lock.yaml
web/: .gitignore  README.md  index.html  package-lock.json  package.json
web/src/: App.jsx  index.css
web/src/components/: Common.jsx
web/src/constants/: theme.js
web/src/pages/: DocumentLibrary.jsx  HomePage.jsx  LearningAssistant.jsx
