[project]
name = "mark-mind-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.2",
    "fastapi[standard]>=0.124.0",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.3",
    "langchain-surrealdb>=0.2.0",
    "langfuse>=3.11.1",
    "langgraph>=1.0.5",
    "markdownify>=1.2.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pypdf>=6.4.2",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.20",
    "python-socks>=2.8.0",
    "surrealdb>=1.0.7",
]
